[gd_scene load_steps=22 format=3 uid="uid://csn0bfcuih21b"]

[ext_resource type="Script" path="res://scenes/entities/Player.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://cbnagq224jfym" path="res://audio/sfx/LandSFX/FOLEYFeet_CleanConcrete_Boots_Lands 05.wav" id="2"]
[ext_resource type="Material" path="res://common/bloodvision.material" id="3"]
[ext_resource type="Texture2D" uid="uid://0mmc3fiuq7bq" path="res://common/radial.png" id="4"]
[ext_resource type="AudioStream" uid="uid://j4kj26y3lgqu" path="res://audio/sfx/LandSFX/FOLEYFeet_CleanConcrete_Boots_Lands 04.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://bxxwogwb3vxio" path="res://audio/sfx/JumpSFX/SWSH_Cloth_03.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://dy2vjes0exaaq" path="res://audio/sfx/FootstepSFX/FOLEYFeet_CleanConcrete_Boots_Medium 02.wav" id="7"]
[ext_resource type="AudioStream" uid="uid://ccfxd5q77u30t" path="res://audio/sfx/LandSFX/FOLEYFeet_CleanConcrete_Boots_Lands 03.wav" id="8"]
[ext_resource type="AudioStream" uid="uid://c32k5qxrun7e" path="res://audio/sfx/FootstepSFX/FOLEYFeet_CleanConcrete_Boots_Medium 06.wav" id="9"]
[ext_resource type="AudioStream" uid="uid://ddv5v8hdikm25" path="res://audio/sfx/JumpSFX/SWSH_Cloth_02.wav" id="10"]
[ext_resource type="AudioStream" uid="uid://bt0dq11nrp7s3" path="res://audio/sfx/FootstepSFX/FOLEYFeet_CleanConcrete_Boots_Medium 04.wav" id="11"]
[ext_resource type="AudioStream" uid="uid://b3rys8p4w53sl" path="res://audio/sfx/JumpSFX/SWSH_Cloth_01.wav" id="12"]
[ext_resource type="AudioStream" uid="uid://vbkle7ddpun1" path="res://audio/sfx/FootstepSFX/FOLEYFeet_CleanConcrete_Boots_Medium 05.wav" id="13"]
[ext_resource type="Texture2D" uid="uid://b0ioaii3e4j1g" path="res://common/monochrome-transparent_packed.png" id="14"]
[ext_resource type="AudioStream" uid="uid://p3kh7hsfgmhy" path="res://audio/sfx/EnemySFX/EnemySwingSFX/Whoosh Sword Cut Clean Fast Gore-004.wav" id="15"]
[ext_resource type="AudioStream" uid="uid://c5tvgcwx2io2g" path="res://audio/sfx/EnemySFX/EnemySwingSFX/Whoosh Sword Cut Clean Fast Gore-002.wav" id="16"]
[ext_resource type="AudioStream" uid="uid://brxetcp0hii6q" path="res://audio/sfx/EnemySFX/EnemySwingSFX/Whoosh Sword Cut Clean Fast Gore-001.wav" id="17"]
[ext_resource type="AudioStream" uid="uid://cojjd1iux1hc8" path="res://audio/sfx/EnemySFX/EnemySwingSFX/Whoosh Sword Cut Clean Fast Gore-005.wav" id="18"]
[ext_resource type="AudioStream" uid="uid://davpnetrv2wap" path="res://audio/sfx/EnemySFX/EnemySwingSFX/Whoosh Sword Cut Clean Fast Gore-003.wav" id="19"]

[sub_resource type="CircleShape2D" id="1"]
radius = 7.0

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(2, 2)

[node name="Player" type="CharacterBody2D"]
collision_layer = 10
collision_mask = 13
script = ExtResource("1")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.776471, 0.87451, 1, 1)
shadow_enabled = true
texture = ExtResource("4")
texture_scale = 0.7

[node name="RedLight" type="PointLight2D" parent="."]
visible = false
color = Color(1, 0.588235, 0.588235, 1)
shadow_enabled = true
texture = ExtResource("4")
texture_scale = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("14")
region_enabled = true
region_rect = Rect2(400, 96, 16, 16)

[node name="SpriteShaded" type="Sprite2D" parent="."]
visible = false
material = ExtResource("3")
texture = ExtResource("14")
region_enabled = true
region_rect = Rect2(400, 96, 16, 16)

[node name="FlySprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("14")
region_enabled = true
region_rect = Rect2(416, 128, 16, 16)

[node name="FlySpriteShaded" type="Sprite2D" parent="."]
visible = false
material = ExtResource("3")
texture = ExtResource("14")
region_enabled = true
region_rect = Rect2(416, 128, 16, 16)

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="JumpArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpArea"]
shape = SubResource("2")

[node name="SlayRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 4

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="SFX" type="Node" parent="."]

[node name="JumpSFX" type="Node" parent="SFX"]

[node name="JumpSFX1" type="AudioStreamPlayer" parent="SFX/JumpSFX"]
stream = ExtResource("12")
volume_db = -6.0
pitch_scale = 1.5
mix_target = 2
bus = &"SFX"

[node name="JumpSFX2" type="AudioStreamPlayer" parent="SFX/JumpSFX"]
stream = ExtResource("10")
volume_db = -6.0
pitch_scale = 1.5
mix_target = 2
bus = &"SFX"

[node name="JumpSFX3" type="AudioStreamPlayer" parent="SFX/JumpSFX"]
stream = ExtResource("6")
volume_db = -6.0
pitch_scale = 1.5
mix_target = 2
bus = &"SFX"

[node name="LandSFX" type="Node" parent="SFX"]

[node name="LandSFX1" type="AudioStreamPlayer" parent="SFX/LandSFX"]
stream = ExtResource("8")
volume_db = -6.0
pitch_scale = 0.7
mix_target = 2
bus = &"SFX"

[node name="LandSFX2" type="AudioStreamPlayer" parent="SFX/LandSFX"]
stream = ExtResource("5")
volume_db = -6.0
pitch_scale = 0.7
mix_target = 2
bus = &"SFX"

[node name="LandSFX3" type="AudioStreamPlayer" parent="SFX/LandSFX"]
stream = ExtResource("2")
volume_db = -6.0
pitch_scale = 0.64
mix_target = 2
bus = &"SFX"

[node name="FootstepSFX" type="Node" parent="SFX"]

[node name="FootstepSFX" type="AudioStreamPlayer" parent="SFX/FootstepSFX"]
stream = ExtResource("7")
volume_db = -6.0
mix_target = 2
bus = &"SFX"

[node name="FootstepSFX2" type="AudioStreamPlayer" parent="SFX/FootstepSFX"]
stream = ExtResource("11")
volume_db = -6.0
mix_target = 2
bus = &"SFX"

[node name="FootstepSFX3" type="AudioStreamPlayer" parent="SFX/FootstepSFX"]
stream = ExtResource("13")
volume_db = -6.0
mix_target = 2
bus = &"SFX"

[node name="FootstepSFX4" type="AudioStreamPlayer" parent="SFX/FootstepSFX"]
stream = ExtResource("9")
volume_db = -6.0
mix_target = 2
bus = &"SFX"

[node name="PlayerSwingSFX" type="Node" parent="SFX"]

[node name="PlayerSwingSFX1" type="AudioStreamPlayer" parent="SFX/PlayerSwingSFX"]
stream = ExtResource("17")
volume_db = -2.0
pitch_scale = 1.1
bus = &"SFX"

[node name="PlayerSwingSFX2" type="AudioStreamPlayer" parent="SFX/PlayerSwingSFX"]
stream = ExtResource("16")
volume_db = -2.0
pitch_scale = 1.1
bus = &"SFX"

[node name="PlayerSwingSFX3" type="AudioStreamPlayer" parent="SFX/PlayerSwingSFX"]
stream = ExtResource("19")
volume_db = -2.0
pitch_scale = 1.1
bus = &"SFX"

[node name="PlayerSwingSFX4" type="AudioStreamPlayer" parent="SFX/PlayerSwingSFX"]
stream = ExtResource("15")
volume_db = -2.0
pitch_scale = 1.1
bus = &"SFX"

[node name="PlayerSwingSFX5" type="AudioStreamPlayer" parent="SFX/PlayerSwingSFX"]
stream = ExtResource("18")
volume_db = -2.0
pitch_scale = 1.1
bus = &"SFX"

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
